--- a/docs/specs/test-suites/test-rel02.1.yaml
+++ b/docs/specs/test-suites/test-rel02.1.yaml
@@ -6,50 +6,46 @@ traces:
 - rel02.1-uc002-table-benchmarks
 - rel02.1-uc003-self-hosting
 - rel02.1-uc004-metadata-lifecycle
-preconditions: |-
-  Cupboard binary built from cmd/cupboard
-  Fresh temp directory for config and data
-  Config file points SQLite backend at the temp data directory
-  CUPBOARD_CONFIG environment variable set to config file path
-  No existing crumbs in the table
-  Go test infrastructure available (go test command)
-  tests/integration package contains benchmark test files
-  Cupboard initialized with SQLite backend in a temp directory
-  Built-in properties seeded per prd002-sqlite-backend R9
-  No existing crumbs
-  Cupboard attached with SQLite backend
-  Fresh temp directory for data
-  No existing crumbs or metadata
-  Built-in schemas (comments, attachments) pre-registered
+preconditions:
+- Cupboard binary built from cmd/cupboard
+- Fresh temp directory for config and data
+- Config file points SQLite backend at the temp data directory
+- CUPBOARD_CONFIG environment variable set to config file path
+- No existing crumbs in the table
+- Go test infrastructure available (go test command)
+- tests/integration package contains benchmark test files
+- Cupboard initialized with SQLite backend in a temp directory
+- Built-in properties seeded per prd002-sqlite-backend R9
+- No existing crumbs
+- Cupboard attached with SQLite backend
+- Fresh temp directory for data
+- No existing crumbs or metadata
+- Built-in schemas (comments, attachments) pre-registered
 test_cases:
 - name: Create task with JSON output returns crumb_id, state, and type
-  description: 'Validates S1: cupboard create --type task --title ''Demo'' --description
-    ''Test'' --json outputs JSON with crumb_id, state open, type task. '
+  description: 'Validates S1: cupboard create --type task --title ''Demo'' --description ''Test'' --json outputs JSON with
+    crumb_id, state open, type task. '
   inputs:
     args:
     - cupboard create --type task --title "Demo" --description "Test" --json
   expected:
     exit_code: 0
-    stdout_structure: '{"crumb_id": "present", "state": "open", "type": "task", "title":
-      "Demo"}'
+    stdout_structure: '{"crumb_id": "present", "state": "open", "type": "task", "title": "Demo"}'
 - name: Create task with required fields in human-readable mode
   inputs:
     args:
-    - cupboard create --type task --title "Implement feature" --description "Details
-      here"
+    - cupboard create --type task --title "Implement feature" --description "Details here"
   expected:
     exit_code: 0
     stdout: Created
 - name: List returns JSON array containing created task
-  description: 'Validates S2: cupboard list --json returns JSON array containing the
-    created task. '
+  description: 'Validates S2: cupboard list --json returns JSON array containing the created task. '
   inputs:
     args:
     - cupboard list --json
   expected:
     exit_code: 0
-    stdout_structure: '{"type": "array", "min_length": 1, "items_contain": {"title":
-      "Listed task", "type": "task"}}'
+    stdout_structure: '{"type": "array", "min_length": 1, "items_contain": {"title": "Listed task", "type": "task"}}'
 - name: List empty cupboard returns empty JSON array
   inputs:
     args:
@@ -58,8 +54,7 @@ test_cases:
     exit_code: 0
     stdout_structure: '{"length": 0}'
 - name: Show displays title, state, type, and description
-  description: 'Validates S3: cupboard show <id> displays title, state, type, and
-    description in human-readable format. '
+  description: 'Validates S3: cupboard show <id> displays title, state, type, and description in human-readable format. '
   inputs:
     args:
     - cupboard show ${crumb_id}
@@ -72,8 +67,7 @@ test_cases:
     - cupboard show ${crumb_id} --json
   expected:
     exit_code: 0
-    stdout_structure: '{"title": "JSON show", "type": "task", "state": "open", "description":
-      "Machine readable"}'
+    stdout_structure: '{"title": "JSON show", "type": "task", "state": "open", "description": "Machine readable"}'
 - name: Show nonexistent ID returns error
   inputs:
     args:
@@ -82,15 +76,14 @@ test_cases:
     exit_code: 1
     stderr_contains: not found
 - name: Ready returns JSON array including open tasks
-  description: 'Validates S4: cupboard ready --json --type task returns JSON array
-    including open tasks. '
+  description: 'Validates S4: cupboard ready --json --type task returns JSON array including open tasks. '
   inputs:
     args:
     - cupboard ready --json --type task
   expected:
     exit_code: 0
-    stdout_structure: '{"type": "array", "min_length": 1, "items_contain": {"title":
-      "Ready task", "state": "open", "type": "task"}}'
+    stdout_structure: '{"type": "array", "min_length": 1, "items_contain": {"title": "Ready task", "state": "open", "type":
+      "task"}}'
 - name: Ready filters by type
   inputs:
     args:
@@ -106,8 +99,7 @@ test_cases:
     exit_code: 0
     stdout_structure: '{"max_length": 2}'
 - name: Update status to in_progress succeeds with confirmation
-  description: 'Validates S5: cupboard update <id> --status in_progress exits with
-    code 0 and confirmation message. '
+  description: 'Validates S5: cupboard update <id> --status in_progress exits with code 0 and confirmation message. '
   inputs:
     args:
     - cupboard update ${crumb_id} --status in_progress
@@ -128,8 +120,7 @@ test_cases:
     exit_code: 1
     stderr_contains: not found
 - name: Ready excludes tasks not in open state
-  description: 'Validates S6: cupboard ready --json --type task excludes tasks no
-    longer in open state. '
+  description: 'Validates S6: cupboard ready --json --type task excludes tasks no longer in open state. '
   inputs:
     args:
     - cupboard ready --json --type task
@@ -144,8 +135,7 @@ test_cases:
     exit_code: 0
     stdout_structure: '{"length": 0}'
 - name: Comments add exits with confirmation
-  description: 'Validates S7: cupboard comments add <id> ''text'' exits with code
-    0 and confirmation message. '
+  description: 'Validates S7: cupboard comments add <id> ''text'' exits with code 0 and confirmation message. '
   inputs:
     args:
     - 'cupboard comments add ${crumb_id} "tokens: 34256"'
@@ -175,8 +165,7 @@ test_cases:
     exit_code: 0
     stdout: Second comment
 - name: Close exits with confirmation
-  description: 'Validates S9: cupboard close <id> exits with code 0 and confirmation
-    message. '
+  description: 'Validates S9: cupboard close <id> exits with code 0 and confirmation message. '
   inputs:
     args:
     - cupboard close ${crumb_id}
@@ -191,8 +180,7 @@ test_cases:
     exit_code: 1
     stderr_contains: not found
 - name: Show confirms state is closed after close command
-  description: 'Validates S10: cupboard show <id> shows state as closed after close
-    command. '
+  description: 'Validates S10: cupboard show <id> shows state as closed after close command. '
   inputs:
     args:
     - cupboard show ${crumb_id}
@@ -214,25 +202,22 @@ test_cases:
     exit_code: 0
     stdout_structure: '{"length": 1, "items": [{"title": "Open for work"}]}'
 - name: Full issue-tracking workflow
-  description: 'Exercises the complete flow from F1-F14 in the use case: create task,
-    verify with list and show, claim with update, add comment, close, and confirm
-    final state. '
+  description: 'Exercises the complete flow from F1-F14 in the use case: create task, verify with list and show, claim with
+    update, add comment, close, and confirm final state. '
   inputs: {}
   expected:
     exit_code: 0
 - name: Create epic with labels
-  description: 'Validates F4 from use case: create epic with --labels flag to set
-    categorical and list properties. '
+  description: 'Validates F4 from use case: create epic with --labels flag to set categorical and list properties. '
   inputs:
     args:
     - cupboard create --type epic --title "Storage layer" --labels "code,infra" --json
   expected:
     exit_code: 0
-    stdout_structure: '{"type": "epic", "title": "Storage layer", "labels": ["code",
-      "infra"]}'
+    stdout_structure: '{"type": "epic", "title": "Storage layer", "labels": ["code", "infra"]}'
 - name: Get benchmark with 10 crumbs
-  description: 'Measure Table.Get latency with 10 seeded crumbs. Benchmark uses random
-    ID selection to measure average lookup time. '
+  description: 'Measure Table.Get latency with 10 seeded crumbs. Benchmark uses random ID selection to measure average lookup
+    time. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsGet10 -benchmem ./tests/integration/...
@@ -261,8 +246,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsGet10000
 - name: Set create benchmark with 10 existing crumbs
-  description: 'Measure Table.Set latency for creating new crumbs (empty ID triggers
-    UUID v7 generation). Includes JSONL sync cost per prd002-sqlite-backend R5.3. '
+  description: 'Measure Table.Set latency for creating new crumbs (empty ID triggers UUID v7 generation). Includes JSONL sync
+    cost per prd002-sqlite-backend R5.3. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsSetCreate10 -benchmem ./tests/integration/...
@@ -277,8 +262,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsSetCreate1000
 - name: Set update benchmark with 10 crumbs
-  description: 'Measure Table.Set latency for updating existing crumbs. Includes JSONL
-    sync cost per prd002-sqlite-backend R5.3. '
+  description: 'Measure Table.Set latency for updating existing crumbs. Includes JSONL sync cost per prd002-sqlite-backend
+    R5.3. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsSetUpdate10 -benchmem ./tests/integration/...
@@ -293,9 +278,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsSetUpdate1000
 - name: Delete benchmark with 10 crumbs
-  description: 'Measure Table.Delete latency including cascade deletion of property
-    values, metadata, and links per prd003-crumbs-interface R8.3. Each iteration creates
-    then deletes a crumb. '
+  description: 'Measure Table.Delete latency including cascade deletion of property values, metadata, and links per prd003-crumbs-interface
+    R8.3. Each iteration creates then deletes a crumb. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsDelete10 -benchmem ./tests/integration/...
@@ -310,8 +294,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsDelete1000
 - name: Fetch all benchmark with 100 crumbs
-  description: 'Measure Table.Fetch latency with empty filter (returns all crumbs).
-    Exercises full table scan with entity hydration. '
+  description: 'Measure Table.Fetch latency with empty filter (returns all crumbs). Exercises full table scan with entity
+    hydration. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsFetchAll100 -benchmem ./tests/integration/...
@@ -326,8 +310,7 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsFetchAll1000
 - name: Fetch with state filter benchmark 100 crumbs
-  description: 'Measure Table.Fetch with state filter. Exercises idx_crumbs_state
-    index per prd002-sqlite-backend R3.3. '
+  description: 'Measure Table.Fetch with state filter. Exercises idx_crumbs_state index per prd002-sqlite-backend R3.3. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsFetchState100 -benchmem ./tests/integration/...
@@ -342,8 +325,7 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsFetchState1000
 - name: Fetch with properties filter benchmark 100 crumbs
-  description: 'Measure Table.Fetch with crumbs that have properties set. Exercises
-    crumb_properties table hydration. '
+  description: 'Measure Table.Fetch with crumbs that have properties set. Exercises crumb_properties table hydration. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsFetchProperties100 -benchmem ./tests/integration/...
@@ -358,8 +340,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsFetchProperties1000
 - name: Fetch with limit simulation benchmark
-  description: 'Measure Table.Fetch from 1000 crumbs simulating limit behavior. Fetches
-    all then takes first 10 to establish baseline for future limit filter support. '
+  description: 'Measure Table.Fetch from 1000 crumbs simulating limit behavior. Fetches all then takes first 10 to establish
+    baseline for future limit filter support. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbsFetchLimit100 -benchmem ./tests/integration/...
@@ -367,8 +349,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbsFetchLimit100
 - name: SetProperty benchmark with 10 crumbs
-  description: 'Measure Crumb.SetProperty + Table.Set latency. Includes Get, SetProperty,
-    and Set to persist with JSONL write for crumb_properties. '
+  description: 'Measure Crumb.SetProperty + Table.Set latency. Includes Get, SetProperty, and Set to persist with JSONL write
+    for crumb_properties. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbSetProperty10 -benchmem ./tests/integration/...
@@ -383,9 +365,8 @@ test_cases:
     exit_code: 0
     stdout: BenchmarkCrumbSetProperty1000
 - name: GetProperty benchmark with 10 crumbs
-  description: 'Measure Crumb.GetProperty latency. This is a read-only operation on
-    the in-memory Properties map. Benchmarks in-memory crumb objects without database
-    access. '
+  description: 'Measure Crumb.GetProperty latency. This is a read-only operation on the in-memory Properties map. Benchmarks
+    in-memory crumb objects without database access. '
   inputs:
     args:
     - go test -bench=BenchmarkCrumbGetProperty10 -benchmem ./tests/integration/...
@@ -428,8 +409,8 @@ test_cases:
     exit_code: 0
     stdout: CrumbID
 - name: Create task with parent
-  description: 'Create a parent crumb first, then create a child crumb. Parent-child
-    relationships use the links table, not inline JSON fields. '
+  description: 'Create a parent crumb first, then create a child crumb. Parent-child relationships use the links table, not
+    inline JSON fields. '
   inputs:
     args:
     - cupboard set crumbs "" '{"Name":"Child task","State":"draft"}'
@@ -437,8 +418,8 @@ test_cases:
     exit_code: 0
     stdout: CrumbID
 - name: Create without name succeeds
-  description: 'Current CLI does not enforce required Name field. Set without Name
-    succeeds but creates a crumb with empty Name. '
+  description: 'Current CLI does not enforce required Name field. Set without Name succeeds but creates a crumb with empty
+    Name. '
   inputs:
     args:
     - cupboard set crumbs "" '{"State":"draft"}'
@@ -516,15 +497,14 @@ test_cases:
     exit_code: 0
     stdout_structure: '{"length": 0}'
 - name: Do-work cycle
-  description: 'Simulates the do-work workflow: create task, list ready tasks (draft),
-    claim task (set state to taken), close task (set state to pebble). Comments are
-    not yet implemented; token tracking step is skipped. '
+  description: 'Simulates the do-work workflow: create task, list ready tasks (draft), claim task (set state to taken), close
+    task (set state to pebble). Comments are not yet implemented; token tracking step is skipped. '
   inputs: {}
   expected:
     exit_code: 0
 - name: Make-work cycle
-  description: 'Simulates the make-work workflow: list existing issues, create an
-    epic, create child tasks. Parent links use the links table (not tested here). '
+  description: 'Simulates the make-work workflow: list existing issues, create an epic, create child tasks. Parent links use
+    the links table (not tested here). '
   inputs: {}
   expected:
     exit_code: 0
@@ -534,18 +514,15 @@ test_cases:
   expected:
     exit_code: 0
 - name: Create comment with empty ID generates UUID v7
-  description: Calling Table.Set on metadata table with empty ID and comments schema
-    generates a UUID v7 identifier.
+  description: Calling Table.Set on metadata table with empty ID and comments schema generates a UUID v7 identifier.
   inputs: {}
   expected: {}
 - name: Create attachment with empty ID generates UUID v7
-  description: Calling Table.Set on metadata table with empty ID and attachments schema
-    generates a UUID v7 identifier.
+  description: Calling Table.Set on metadata table with empty ID and attachments schema generates a UUID v7 identifier.
   inputs: {}
   expected: {}
 - name: Multiple comments accumulate on same crumb
-  description: Adding multiple comment metadata entries does not replace previous
-    entries.
+  description: Adding multiple comment metadata entries does not replace previous entries.
   inputs: {}
   expected: {}
 - name: Comments and attachments coexist on same crumb
@@ -553,13 +530,11 @@ test_cases:
   inputs: {}
   expected: {}
 - name: Comment stores plain text content
-  description: Metadata with comments schema stores Content as plain text including
-    special characters.
+  description: Metadata with comments schema stores Content as plain text including special characters.
   inputs: {}
   expected: {}
 - name: Attachment stores JSON content
-  description: Metadata with attachments schema stores Content as JSON string that
-    can be parsed.
+  description: Metadata with attachments schema stores Content as JSON string that can be parsed.
   inputs: {}
   expected: {}
 - name: Get retrieves metadata with matching fields
@@ -571,8 +546,7 @@ test_cases:
   inputs: {}
   expected: {}
 - name: Fetch with schema filter returns attachments only
-  description: Table.Fetch with TableName=attachments filter returns only attachment
-    entries.
+  description: Table.Fetch with TableName=attachments filter returns only attachment entries.
   inputs: {}
   expected: {}
 - name: Fetch with crumb_id filter returns entries for specific crumb
@@ -580,13 +554,11 @@ test_cases:
   inputs: {}
   expected: {}
 - name: Fetch with crumb_id for crumb with no metadata returns empty
-  description: Table.Fetch with CrumbID filter for crumb without metadata returns
-    empty slice.
+  description: Table.Fetch with CrumbID filter for crumb without metadata returns empty slice.
   inputs: {}
   expected: {}
 - name: Fetch with schema and crumb_id filters returns intersection
-  description: Table.Fetch with both TableName and CrumbID filters returns entries
-    matching both.
+  description: Table.Fetch with both TableName and CrumbID filters returns entries matching both.
   inputs: {}
   expected: {}
 - name: Get nonexistent metadata returns ErrNotFound
@@ -606,8 +578,7 @@ test_cases:
   inputs: {}
   expected: {}
 - name: Fetch from empty table returns empty result
-  description: Table.Fetch with nil filter on empty metadata table returns empty slice
-    without error.
+  description: Table.Fetch with nil filter on empty metadata table returns empty slice without error.
   inputs: {}
   expected: {}
 - name: Delete nonexistent metadata returns ErrNotFound
